# SimCad

./: .cmake-functions  .cmake-functions.cmake  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  README.md  SimCad.kicad_sym  SimCad.lib  TODO  common.mk
Net2Sim/: .gitignore  CMakeLists.txt  Net2Sim.cpp  Net2Sim.cpp.new  Net2Sim.h  Net2SimException.h  Net2Sim_main.cpp  NetParser.cpp  NetParser.h  Node.cpp  Node.h  ParseException.h  main.cpp
examples/8bit-computer/: .gitignore  CMakeLists.txt  Computer.cpp  Computer.h  Makefile  main.cpp  prog_display.cpp  prog_display.h  prog_microcode.cpp  prog_microcode.h
examples/8bit-computer/kicad/: .gitignore  8bit-computer.kicad_pro  8bit-computer.kicad_sch  8bit-computer.lib  8bit-computer.net  8bit-computer.sch  a-register.kicad_sch  a-register.sch  alu.kicad_sch  alu.sch  b-register.kicad_sch  b-register.sch  clock.kicad_sch  clock.sch  control.kicad_sch  control.sch  inst-register.kicad_sch  inst-register.sch  mar.kicad_sch  mar.sch  output.kicad_sch  output.sch  program-counter.kicad_sch  program-counter.sch  ram.kicad_sch  ram.sch  sym-lib-table
examples/Diodes/: .gitignore  Diodes.net  Diodes.sch  Makefile  main.cpp
examples/OP-AMP/: .gitignore  Makefile  OP_AMP.net  OP_AMP.sch  main.cpp
examples/R2R-Ladder-DAC/: .cpp  .gitignore  .h  CMakeLists.txt  Makefile  R2R-Ladder-DAC.kicad_pro  R2R-Ladder-DAC.kicad_sch  R2R-Ladder-DAC.net  R2R-Ladder-DAC.sch  main.cpp
examples/RS-flipflop/: .gitignore  Makefile  RS-flipflop.net  RS-flipflop.sch  main.cpp
examples/SimpleNet1/: .gitignore  CMakeLists.txt  Makefile  SimpleNet1.kicad_pro  SimpleNet1.kicad_sch  SimpleNet1.net  SimpleNet1.sch  main.cpp
examples/SimpleNet2/: .gitignore  CMakeLists.txt  Makefile  SimpleNet2.net  SimpleNet2.sch  main.cpp
examples/Timer/: .gitignore  CMakeLists.txt  Makefile  Timer.kicad_pro  Timer.kicad_sch  Timer.net  Timer.sch  main.cpp
examples/TransistorBlinker/: .gitignore  CMakeLists.txt  Makefile  TransistorBlinker.kicad_pro  TransistorBlinker.kicad_sch  TransistorBlinker.net  TransistorBlinker.sch  main.cpp
include/: ALU.h  AND.h  AND2.h  AND3.h  AND4.h  AND5.h  BUF.h  BUF_G.h  Bus.h  BusRef.h  Config.h  EOR.h  EOR2.h  GATE.h  Gate.h  INH.h  INH2.h  INV.h  INV_G.h  LED.h  LEDRef.h  NAND.h  NAND2.h  NAND3.h  NAND4.h  NAND5.h  NOR.h  NOR2.h  NOR3.h  NOR4.h  NOR5.h  Named.h  Narray.h  Net.h  OR.h  OR2.h  OR4.h  Part.h  Pin.h  PowerSupply.h  (+12 more)
include/core/: Bus.h  BusRef.h  Config.h  Element.h  Named.h  Narray.h  Net.h  Part.h  Pin.h  ShortCircuitEx.h  State.h
include/gates/: AND.h  BUF.h  BUF_G.h  BUF_OC.h  EOR.h  Gate.h  INH.h  INV.h  INV_G.h  INV_OC.h  NAND.h  NOR.h  OPAMP.h  OR.h
include/threepoles/: BC107.h  OPAMP.h
include/twopoles/: C.h  ISOURCE.h  (+7 more)
parts/: CMakeLists.txt
src/: Bus.h  BusRef.h  CMakeLists.txt  Config.h  LEDRef.h  Named.h  Net.cpp  Net.h  Pin.cpp  Pin.h  PowerSupply.cpp  SRAM_32kb_DIP28.cpp  SST39SF040.cpp  SimCadException.cpp  SimCadException.h  State.cpp  TwoPole.h  demo.cpp  main.cpp  main.cpp.adder  plotRealTime.cpp  plotRealTime.h
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  Test_74LS00.cpp  Test_74LS02.cpp  Test_74LS04.cpp  Test_74LS08.cpp  Test_74LS10.cpp  Test_74LS138.cpp  Test_74LS151.cpp  Test_74LS153.cpp  Test_74LS157.cpp  Test_74LS161.cpp  Test_74LS165.cpp  Test_74LS173.cpp  Test_74LS251.cpp  Test_74LS253.cpp  Test_74LS257.cpp  Test_74LS283.cpp  Test_74LS32.cpp  Test_74LS86.cpp  Test_D_LATCH.cpp  Test_J2K2_FF.cpp  Test_JK_FF.cpp
tests/Memory_EEPROM/: Test_28C16.cpp
tests/Memory_RAM/: Test_74189.cpp
tests/_74xx/: TestUtils.cpp  TestUtils.h  Test_74LS00.cpp  Test_74LS02.cpp  Test_74LS04.cpp  Test_74LS08.cpp  Test_74LS10.cpp  Test_74LS138.cpp  Test_74LS151.cpp  Test_74LS153.cpp  Test_74LS157.cpp  Test_74LS161.cpp  Test_74LS165.cpp  Test_74LS166.cpp  Test_74LS173.cpp  Test_74LS181.cpp  Test_74LS245.cpp  Test_74LS251.cpp  Test_74LS253.cpp  Test_74LS257.cpp  Test_74LS283.cpp  Test_74LS32.cpp  Test_74LS541.cpp  Test_74LS86.cpp
tests/base_parts/: Test_D_LATCH.cpp  Test_J2K2_FF.cpp  Test_JK_FF.cpp
(+307 files in other folders)
